append action what creating new geojson to github repository
